better responsive behavior on mobile dev & fixed displaying results

--- a/style2.css
+++ b/style2.css
@@ -74,7 +74,7 @@ button:focus {
   text-align: center;
   border: 2px solid black;
   opacity: 0;
-  background: rgba(0, 0, 0, 0.336);
+  background: rgba(0, 0, 0, 0.473);
   box-shadow: 0 0 50px 10px rgba(21, 255, 0, 0.356)
 
 }
@@ -99,7 +99,8 @@ ul li {
 @media (max-width:500px) {
   .container {
     margin:auto;
-    padding: auto
+    padding: 50px
   }
+
 }
 
